# humpback-whale-song-detection

./: .gitignore  .mypy.ini  .pylintrc  README.md  apply_model.py  apply_model_day.py  daily_cronjob.sh  file_helper.py  justfile  makefile  misc_test.py  model_helper.py  notes.md  plot_scores.py  plot_scores_day.py  pyproject.toml  requirements.txt  resample_sox.sh  resample_sox_pll.sh  resample_year_months.sh
.github/workflows/: ci.yml
hwsd/: apply_model.py  apply_model_day.py  file_helper.py  misc.py  misc_test.py  model_helper.py  plot_scores.py  plot_scores_day.py  plotting.py
scripts/: plot_score.py  score_file.py
