[project]
name = "humpback-whale-song-detection"
version = "0.1.0"
description = "Applying the NOAA/Google Humpback Whale Song Detector on Pacific Ocean Sound data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "scipy",
    "soundfile",
    "numpy",
    "tensorflow",
    "tensorflow-hub",
]

[project.urls]
Homepage = "https://github.com/mbari-org/humpback-whale-song-detection"

[dependency-groups]
dev = [
    "ty",
    "black",
    "pytest",
    "usort",
    "ufmt",
    "pylint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hwsd"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["hwsd"]
