[project]
name = "humpback-whale-song-detection"
version = "0.1.0"
description = "Applying the NOAA/Google Humpback Whale Song Detector on Pacific Ocean Sound data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "scipy",
    "soundfile",
    "numpy",
    "tensorflow",
    "tensorflow-hub",
]

[project.urls]
Homepage = "https://github.com/mbari-org/humpback-whale-song-detection"

[dependency-groups]
dev = [
    "ty",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hwsd"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable common ruff rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade - modernize Python code (list/dict instead of List/Dict, etc.)
    "B",   # flake8-bugbear - find likely bugs
    "SIM", # flake8-simplify - simplify code
]

[tool.pytest.ini_options]
testpaths = ["hwsd"]
